@@ -1,5 +1,12 @@
 2008-08-25 Albert Chu <chu11@llnl.gov>
 
+	* ipmi-sel/src/: Support debug dumping of SEL Event Records.
+
+	* ipmi-sensors/src/: Include sensor owner id type in slave address
+	output.
+	
+2008-08-25 Albert Chu <chu11@llnl.gov>
+
 	* tagged ipmi_chassis_boot_flags_valid_remove_pre
 
 	* ipmi-chassis-config/: Do not allow configuration of
